Fix vertical alignment for profile img in header

--- a/css/styles.css
+++ b/css/styles.css
@@ -3721,6 +3721,9 @@ textarea {
 }
 
 .header__profile-img-btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   background: none;
   border: none;
   padding: 0;
